--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,8 +1,12 @@
 name: Schedule Paper Collection
 
 on:
-  schedule:
-    - cron: '0 7 * * *'  # 毎日7時に実行
+  # schedule:
+  #   - cron: '0 7 * * *'  # 毎日7時に実行
+  push:
+    branches:
+      - main
+  workflow_dispatch:  # 手動トリガーを追加
 
 jobs:
   run:
